raylib/raylib_bindings.odin


    @(link_name="SetShaderValue")
    set_shader_value :: proc(
        shader : Shader,
        uniform_loc : _c.int,
        value : rawptr,
        uniform_type : _c.int
    ) ---;

    @(link_name="SetShaderValueV")
    set_shader_value_v :: proc(
        shader : Shader,
        uniform_loc : _c.int,
        value : rawptr,
        uniform_type : _c.int,
        count : _c.int
    ) ---;

    @(link_name="SetShaderValueMatrix")
    set_shader_value_matrix :: proc(
        shader : Shader,
        uniform_loc : _c.int,
        mat : Matrix
    ) ---;

    @(link_name="SetMatrixProjection")
    set_matrix_projection :: proc(proj : Matrix) ---;

    @(link_name="SetMatrixModelview")
    set_matrix_modelview :: proc(view : Matrix) ---;

    @(link_name="GetMatrixModelview")
    get_matrix_modelview :: proc() -> Matrix ---;

    @(link_name="GenTextureCubemap")
    gen_texture_cubemap :: proc(
        shader : Shader,
        sky_hdr : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTextureIrradiance")
    gen_texture_irradiance :: proc(
        shader : Shader,
        cubemap : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTexturePrefilter")
    gen_texture_prefilter :: proc(
        shader : Shader,
        cubemap : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTextureBRDF")
    gen_texture_brdf :: proc(
        shader : Shader,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="BeginShaderMode")
    begin_shader_mode :: proc(shader : Shader) ---;

    @(link_name="EndShaderMode")
    end_shader_mode :: proc() ---;

    @(link_name="BeginBlendMode")
    begin_blend_mode :: proc(mode : BlendMode) ---;

    @(link_name="EndBlendMode")
    end_blend_mode :: proc() ---;

    @(link_name="BeginScissorMode")
    begin_scissor_mode :: proc(
        x : _c.int,
        y : _c.int,
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="EndScissorMode")
    end_scissor_mode :: proc() ---;

    @(link_name="GetVrDeviceInfo")
    get_vr_device_info :: proc(vr_device_type : _c.int) -> VrDeviceInfo ---;

    @(link_name="InitVrSimulator")
    init_vr_simulator :: proc(info : VrDeviceInfo) ---;

    @(link_name="UpdateVrTracking")
    update_vr_tracking :: proc(camera : ^Camera) ---;

    @(link_name="CloseVrSimulator")
    close_vr_simulator :: proc() ---;

    @(link_name="IsVrSimulatorReady")
    is_vr_simulator_ready :: proc() -> bool ---;

    @(link_name="ToggleVrMode")
    toggle_vr_mode :: proc() ---;

    @(link_name="BeginVrDrawing")
    begin_vr_drawing :: proc() ---;

    @(link_name="EndVrDrawing")
    end_vr_drawing :: proc() ---;

    @(link_name="InitAudioDevice")
    init_audio_device :: proc() ---;

    @(link_name="CloseAudioDevice")
    close_audio_device :: proc() ---;

    @(link_name="IsAudioDeviceReady")
    is_audio_device_ready :: proc() -> bool ---;

    @(link_name="SetMasterVolume")
    set_master_volume :: proc(volume : _c.float) ---;

    @(link_name="LoadWave")
    load_wave :: proc(file_name : cstring) -> Wave ---;

    @(link_name="LoadWaveEx")
    load_wave_ex :: proc(
        data : rawptr,
        sample_count : _c.int,
        sample_rate : _c.int,
        sample_size : _c.int,
        channels : _c.int
    ) -> Wave ---;

    @(link_name="LoadSound")
    load_sound :: proc(file_name : cstring) -> Sound ---;

    @(link_name="LoadSoundFromWave")
    load_sound_from_wave :: proc(wave : Wave) -> Sound ---;

    @(link_name="UpdateSound")
    update_sound :: proc(
        sound : Sound,
        data : rawptr,
        samples_count : _c.int
    ) ---;

    @(link_name="UnloadWave")
    unload_wave :: proc(wave : Wave) ---;

    @(link_name="UnloadSound")
    unload_sound :: proc(sound : Sound) ---;

    @(link_name="ExportWave")
    export_wave :: proc(
        wave : Wave,
        file_name : cstring
    ) ---;

    @(link_name="ExportWaveAsCode")
    export_wave_as_code :: proc(
        wave : Wave,
        file_name : cstring
    ) ---;

    @(link_name="PlaySound")
    play_sound :: proc(sound : Sound) ---;

    @(link_name="PauseSound")
    pause_sound :: proc(sound : Sound) ---;

    @(link_name="ResumeSound")
    resume_sound :: proc(sound : Sound) ---;

    @(link_name="StopSound")
    stop_sound :: proc(sound : Sound) ---;

    @(link_name="IsSoundPlaying")
    is_sound_playing :: proc(sound : Sound) -> bool ---;

    @(link_name="SetSoundVolume")
    set_sound_volume :: proc(
        sound : Sound,
        volume : _c.float
    ) ---;

    @(link_name="SetSoundPitch")
    set_sound_pitch :: proc(
        sound : Sound,
        pitch : _c.float
    ) ---;

    @(link_name="WaveFormat")
    wave_format :: proc(
        wave : ^Wave,
        sample_rate : _c.int,
        sample_size : _c.int,
        channels : _c.int
    ) ---;

    @(link_name="WaveCopy")
    wave_copy :: proc(wave : Wave) -> Wave ---;

    @(link_name="WaveCrop")
    wave_crop :: proc(
        wave : ^Wave,
        init_sample : _c.int,
        final_sample : _c.int
    ) ---;

    @(link_name="GetWaveData")
    get_wave_data :: proc(wave : Wave) -> ^_c.float ---;

    @(link_name="LoadMusicStream")
    load_music_stream :: proc(file_name : cstring) -> Music ---;

    @(link_name="UnloadMusicStream")
    unload_music_stream :: proc(music : Music) ---;

    @(link_name="PlayMusicStream")
    play_music_stream :: proc(music : Music) ---;

    @(link_name="UpdateMusicStream")
    update_music_stream :: proc(music : Music) ---;

    @(link_name="StopMusicStream")
    stop_music_stream :: proc(music : Music) ---;

    @(link_name="PauseMusicStream")
    pause_music_stream :: proc(music : Music) ---;

    @(link_name="ResumeMusicStream")
    resume_music_stream :: proc(music : Music) ---;

    @(link_name="IsMusicPlaying")
    is_music_playing :: proc(music : Music) -> bool ---;

    @(link_name="SetMusicVolume")
    set_music_volume :: proc(
        music : Music,
        volume : _c.float
    ) ---;

    @(link_name="SetMusicPitch")
    set_music_pitch :: proc(
        music : Music,
        pitch : _c.float
    ) ---;

    @(link_name="SetMusicLoopCount")
    set_music_loop_count :: proc(
        music : Music,
        count : _c.int
    ) ---;

    @(link_name="GetMusicTimeLength")
    get_music_time_length :: proc(music : Music) -> _c.float ---;

    @(link_name="GetMusicTimePlayed")
    get_music_time_played :: proc(music : Music) -> _c.float ---;

    @(link_name="InitAudioStream")
    init_audio_stream :: proc(
        sample_rate : _c.uint,
        sample_size : _c.uint,
        channels : _c.uint
    ) -> AudioStream ---;

    @(link_name="UpdateAudioStream")
    update_audio_stream :: proc(
        stream : AudioStream,
        data : rawptr,
        samples_count : _c.int
    ) ---;

    @(link_name="CloseAudioStream")
    close_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="IsAudioBufferProcessed")
    is_audio_buffer_processed :: proc(stream : AudioStream) -> bool ---;

    @(link_name="PlayAudioStream")
    play_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="PauseAudioStream")
    pause_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="ResumeAudioStream")
    resume_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="IsAudioStreamPlaying")
    is_audio_stream_playing :: proc(stream : AudioStream) -> bool ---;

    @(link_name="StopAudioStream")
    stop_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="SetAudioStreamVolume")
    set_audio_stream_volume :: proc(
        stream : AudioStream,
        volume : _c.float
    ) ---;

    @(link_name="SetAudioStreamPitch")
    set_audio_stream_pitch :: proc(
        stream : AudioStream,
        pitch : _c.float
    ) ---;

}
